@@ -1,0 +1,6 @@
+set (heatshrink_sources
+  squash-heatshrink.c
+  heatshrink/heatshrink_encoder.c
+  heatshrink/heatshrink_decoder.c)
+
+squash_plugin_add (heatshrink heatshrink_sources)
