@@ -1,0 +1,20 @@
+# heatshrink Plugin #
+
+heatshrink is a compression library targeted at embedded and real-time
+systems.
+
+For more information about heatshrink see
+https://github.com/atomicobject/heatshrink
+
+## Codecs ##
+
+- heatshrink
+
+## Options ##
+
+- **window-size** (integer, 4 - 15), default 11
+- **lookahead-size** (integer, 3 - 14), default 4
+
+## License ##
+
+The heatshrink library is licensed under the ISC license.
