@@ -1,0 +1,3 @@
+license=ISC
+
+[heatshrink]
