@@ -60,6 +60,7 @@ typedef enum {
   SQUASH_LICENSE_APACHE2         = SQUASH_LICENSE_PERMISSIVE | 0x0a,
   SQUASH_LICENSE_CDDL            = SQUASH_LICENSE_PERMISSIVE | 0x0b | SQUASH_LICENSE_COPYLEFT_INCOMPATIBLE,
   SQUASH_LICENSE_MSPL            = SQUASH_LICENSE_PERMISSIVE | 0x0c | SQUASH_LICENSE_COPYLEFT_INCOMPATIBLE,
+  SQUASH_LICENSE_ISC             = SQUASH_LICENSE_PERMISSIVE | 0x0d,
 
   SQUASH_LICENSE_MPL             = SQUASH_LICENSE_WEAK_COPYLEFT | 0x01,
   SQUASH_LICENSE_LGPL2P1         = SQUASH_LICENSE_WEAK_COPYLEFT | 0x02,
