@@ -8,6 +8,7 @@ Squash 0.8.0
  * Disable csc plugin
  * Add nonnull and sentinel attributes
  * Add support for multiple levels in lzf
+ * Ahh heatshrink plugin
  * Updated many plugins
  * Assorted bug fixes and enhancements
 
